Fix T45955: Python's pdb can't show script source